welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:5: error: not enough arguments for method dessineFleur: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    dessineFleur();
                ^