welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers()
{
  for(i <-1 to 2)
  {
    dessineFleur();
    avance();
  	avance();
  	avance();
  }
}
def dessineFleur(c:Color)
{
  setCouleurBrosse(c)
  for(i <- 1 to 4)
  {
    dessineMotif();
  }
  avance();
  setCouleurBrosse(Color.yellow)
  baisseBrosse();
  leveBrosse();
  
  
}

def dessineMotif()
{
  baisseBrosse();
  leveBrosse();
  droite()
  avance()
  gauche();
  avance();
  gauche();
}